# ot-harjoitustyo

./: .coveragerc  .env  README.md  pyproject.toml  self.path  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  index.html  status.json
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: laajempi_sekvenssikaavio.md  laajennettu_monopoli.md  monopoli_luokkakaavio.md  sekvenssikaavio.md
src/: accounts.db  accounts.py  assets_route.py  game_over.py  index.py  level.py  objects.py  start.py
src/entities/: user.py
src/tests/: accounts_test.py  game_over_test.py  level_test.py  sign_in_rules_test.py  start_test.py
src/user_interface/: UI.py  sign_in.py  sign_in_rules.py  sign_up.py  user_interface.py
