[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Sohvi Puska <sohvip1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
